[package]
name = "http_proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version= "1.5.0", features =["client", "server", "http1"] }            # HTTP library
tokio = { version = "1", features = ["full"] }  # Async runtime
dashmap = "5"             # Concurrent hashmap for in-memory caching
tracing = "0.1"           # Logging
tracing-subscriber = "0.3"  # Logger setup
